--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         >Jennifer</a
       ></strong
     ></br>
-    and is on <a href="https://github.com/jennyweic">Github</a> and hosted by
-    Netlify.</h5>
+    and is on <a href="https://github.com/jennyweic">Github</a> and hosted on
+    <a href="https://jennys-world-clock.netlify.app/">Netlify</a>.</h5>
 </footer>
 <script src="index.js"></script>
 </html>
