Updated Netlify link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       ></strong
     ></br>
     and is on <a href="https://github.com/jennyweic">Github</a> and hosted on
-    <a href="https://jennys-world-clock.netlify.app/">Netlify</a>.</h5>
+    <a href="https://jennifers-world-clock.netlify.app/">Netlify</a>.</h5>
 </footer>
 <script src="index.js"></script>
 </html>
