Added div container for cities dropdown

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 </head>
 <body>
     <h1>World Clock Project</h1>
+    <div class="container">
+      <label for ="cities">Choose a city</label>
+      <select id="city">
+        <option value ="">Select a city</option>
+        <option value ="london">London</option>
+        <option value ="hong-kong">Hong Kong</option>
+        <option value ="bali">Bali</option>
+        <option value ="portugal">Portugal</option>
+        <option value ="oslo">Oslo</option>
+      </select>
+
+    </div>
 
 </body>
 <footer>
