--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>World Clock Project</h1>
     <div class="container">
       <label for ="cities">Choose a city</label>
+    </br>
       <select id="choose-city">
         <option value ="">Select a city</option>
         <option value ="london">London</option>
@@ -20,32 +21,42 @@
       </select>
 
 <div class="individual-city">
-  <h2>London 🇬🇧</h2>
-  <div class="date">20 November 2023</div>
-  <div class="time">09:50 AM</div>
+  <div class="left-box">
+    <h2>London 🇬🇧</h2>
+    <div class="date">20 November 2023</div>
+  </div>
+    <div class="time">09:50 AM</div>
 </div>
 
 <div class="individual-city">
+    <div class="left-box">
   <h2>Hong Kong 🇭🇰</h2>
   <div class="date">20 November 2023</div>
+  </div>
   <div class="time">16:50 PM</div>
 </div>
 
 <div class="individual-city">
-  <h2>Indonesia 🇮🇩</h2>
+  <div class="left-box">
+    <h2>Indonesia 🇮🇩</h2>
   <div class="date">20 November 2023</div>
+  </div>
   <div class="time">17:50 PM</div>
 </div>
 
 <div class="individual-city">
+    <div class="left-box">
   <h2>Portugual 🇵🇹</h2>
   <div class="date">20 November 2023</div>
+  </div>
   <div class="time">09:50 AM</div>
 </div>
 
 <div class="individual-city">
+    <div class="left-box">
   <h2>Norway 🇳🇴</h2>
   <div class="date">20 November 2023</div>
+  </div>
   <div class="time">10:50 AM</div>
 </div>
 
