Updated time and date format

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <h2>London 🇬🇧</h2>
     <div class="date">20 November 2023</div>
   </div>
-    <div class="time">09:50 AM</div>
+    <div class="time">09:50  
+      <span> AM</span></div>
 </div>
 
 <div class="individual-city">
@@ -33,7 +34,8 @@
   <h2>Hong Kong 🇭🇰</h2>
   <div class="date">20 November 2023</div>
   </div>
-  <div class="time">16:50 PM</div>
+  <div class="time">16:50 
+    <span>PM</span></div>
 </div>
 
 <div class="individual-city">
@@ -41,7 +43,8 @@
     <h2>Indonesia 🇮🇩</h2>
   <div class="date">20 November 2023</div>
   </div>
-  <div class="time">17:50 PM</div>
+  <div class="time">17:50 
+    <span>PM</span></div>
 </div>
 
 <div class="individual-city">
@@ -49,7 +52,8 @@
   <h2>Portugual 🇵🇹</h2>
   <div class="date">20 November 2023</div>
   </div>
-  <div class="time">09:50 AM</div>
+  <div class="time">09:50 
+    <span>AM</span></div>
 </div>
 
 <div class="individual-city">
@@ -57,7 +61,8 @@
   <h2>Norway 🇳🇴</h2>
   <div class="date">20 November 2023</div>
   </div>
-  <div class="time">10:50 AM</div>
+  <div class="time">10:50 
+    <span>AM</span></div>
 </div>
 
     </div>
