Updated font colour

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>World Clock</title>
 </head>
 <body>
-    <h1>World Clock Project</h1>
     <div class="container">
+      <h1>World Clock</h1>
       <label for ="cities">Choose a city</label>
     </br>
       <select id="choose-city">
@@ -65,11 +65,8 @@
     <span>AM</span></div>
 </div>
 
-    </div>
-
-</body>
-<footer>
-    <h5>This project was coded by
+<div class="footnote">
+  <h5>This project was coded by
     <strong
       ><a href="https://www.linkedin.com/in/chanwjennifer/" target="_blank"
         >Jennifer</a
@@ -77,6 +74,13 @@
     ></br>
     and is on <a href="https://github.com/jennyweic">Github</a> and hosted on
     <a href="https://jennifers-world-clock.netlify.app/">Netlify</a>.</h5>
+</div>
+
+    </div>
+
+</body>
+<footer>
+    
 </footer>
 <script src="index.js"></script>
 </html>
