Updated remaining city details in function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <option value ="">Select a city</option>
         <option value ="london">London</option>
         <option value ="hong-kong">Hong Kong</option>
-        <option value ="indonesia">Indonesia</option>
         <option value ="portugal">Portugal</option>
         <option value ="norway">Norway</option>
       </select>
@@ -40,15 +39,6 @@
     <span>PM</span></div>
 </div>
 
-<div class="individual-city" id="indonesia-city">
-  <div class="left-box">
-    <h2>Indonesia 🇮🇩</h2>
-  <div class="date">20 November 2023</div>
-  </div>
-  <div class="time">17:50 
-    <span>PM</span></div>
-</div>
-
 <div class="individual-city" id="portugal-city">
     <div class="left-box">
   <h2>Portugual 🇵🇹</h2>
@@ -58,7 +48,7 @@
     <span>AM</span></div>
 </div>
 
-<div class="individual-city" id="norway-city">
+<div class="individual-city" id="oslo-city">
     <div class="left-box">
   <h2>Norway 🇳🇴</h2>
   <div class="date">20 November 2023</div>
