Updated layout css select,city and time

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1> World Clock </h1>
       <label for ="cities">Choose a city</label>
     </br>
       <select id="choose-city">
-        <option value ="">Select a city</option>
+        <option value ="">Select a city 🌎</option>
         <option value ="london">London</option>
         <option value ="hong-kong">Hong Kong</option>
         <option value ="portugal">Portugal</option>
@@ -31,7 +31,7 @@
 </div>
 
 <div class="individual-city" id="hk-city">
-    <div class="left-box">
+    <div>
   <h2>Hong Kong 🇭🇰</h2>
   <div class="date">20 November 2023</div>
   </div>
@@ -40,7 +40,7 @@
 </div>
 
 <div class="individual-city" id="portugal-city">
-    <div class="left-box">
+    <div>
   <h2>Portugual 🇵🇹</h2>
   <div class="date">20 November 2023</div>
   </div>
@@ -49,8 +49,8 @@
 </div>
 
 <div class="individual-city" id="oslo-city">
-    <div class="left-box">
-  <h2>Norway 🇳🇴</h2>
+    <div>
+  <h2>Olso 🇳🇴</h2>
   <div class="date">20 November 2023</div>
   </div>
   <div class="time">10:50 
