Updated timezone + mult-loc funct, - cities html

--- a/index.html
+++ b/index.html
@@ -15,46 +15,14 @@
     </br>
       <select id="choose-city">
         <option value ="">Select a city 🌎</option>
-        <option value ="london">London</option>
-        <option value ="hong-kong">Hong Kong</option>
-        <option value ="portugal">Portugal</option>
-        <option value ="norway">Norway</option>
+        <option value ="Europe/London">London</option>
+        <option value ="Asia/Hong_Kong">Hong Kong</option>
+        <option value ="Portugal">Portugal</option>
+        <option value ="Europe/Oslo">Oslo</option>
       </select>
 
-<div class="individual-city" id="london-city">
-  <div>
-    <h2>London 🇬🇧</h2>
-    <div class="date"></div>
-  </div>
-    <div class="time">  
-      <span></span></div>
-</div>
+<div class="cities">
 
-<div class="individual-city" id="hk-city">
-    <div>
-  <h2>Hong Kong 🇭🇰</h2>
-  <div class="date">20 November 2023</div>
-  </div>
-  <div class="time">16:50 
-    <span>PM</span></div>
-</div>
-
-<div class="individual-city" id="portugal-city">
-    <div>
-  <h2>Portugual 🇵🇹</h2>
-  <div class="date">20 November 2023</div>
-  </div>
-  <div class="time">09:50 
-    <span>AM</span></div>
-</div>
-
-<div class="individual-city" id="oslo-city">
-    <div>
-  <h2>Olso 🇳🇴</h2>
-  <div class="date">20 November 2023</div>
-  </div>
-  <div class="time">10:50 
-    <span>AM</span></div>
 </div>
 
 <div class="footnote">
