Updated lisbon data

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <option value ="">Select a city 🌎</option>
         <option value ="Europe/London">London</option>
         <option value ="Asia/Hong_Kong">Hong Kong</option>
-        <option value ="Portugal">Portugal</option>
+        <option value ="Europe/Lisbon">Lisbon</option>
         <option value ="Europe/Oslo">Oslo</option>
       </select>
 
