--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <option value ="Asia/Hong_Kong">Hong Kong</option>
         <option value ="Europe/Lisbon">Lisbon</option>
         <option value ="Europe/Oslo">Oslo</option>
+        <option value ="Asia/Tokyo">Tokyo</option>
       </select>
 
 <div class="cities">
