--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </br>
       <select id="choose-city">
         <option value ="">Select a city 🌎</option>
+        <option value ="local">My Location</option>
         <option value ="Europe/London">London</option>
         <option value ="Asia/Hong_Kong">Hong Kong</option>
         <option value ="Europe/Lisbon">Lisbon</option>
