--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-      <h1> World Clock </h1>
+      <h1> <a href="/"> World Clock </a> </h1>
       <label for ="cities">Choose a city</label>
     </br>
       <select id="choose-city">
